# vtraxkit

./: .gitignore  README.md  pyproject.toml
src/vtraxkit/: __init__.py
src/vtraxkit/core/: __init__.py  config.py  pipeline.py  video.py
src/vtraxkit/data/: __init__.py  bbox.py  collection.py  skeleton.py  track.py
src/vtraxkit/detection/: base.py  registry.py  yolo.py
src/vtraxkit/filters/: scene.py
src/vtraxkit/io/: coco.py  dataframe.py  npy.py
src/vtraxkit/pose/: base.py  mediapipe_backend.py  registry.py
src/vtraxkit/tracking/: base.py
tests/: test_bbox.py  test_collection.py  test_io_npy.py  test_registry.py  test_scene.py  test_skeleton.py  test_track.py
