[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtraxkit"
version = "0.1.0"
description = "Extract multi-person skeleton trajectories from videos with one line of code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Steven Tse" }]
keywords = ["skeleton", "pose", "tracking", "video", "keypoints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "opencv-python>=4.5",
    "tqdm>=4.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0"]
mediapipe = ["mediapipe>=0.10"]
age = ["torch>=1.9", "torchvision>=0.10"]
pandas = ["pandas>=1.3"]
full = ["vtraxkit[yolo,mediapipe,age,pandas]"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/StevenUST/vtraxkit"

[tool.hatch.build.targets.wheel]
packages = ["src/vtraxkit"]

[tool.ruff]
line-length = 100
